--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
             6.Press the reset button to reset the timer</ul>
     </div>
 </div>
-  <script src="./tim.js"></script>  
+  <script src="./script.js"></script>  
 </body>
 </html>
